# Resume-Screening

./: README.md  app.py  pyproject.toml  requirements.txt  tfidf.pkl
resume_screener/: train.py
resume_screener/app/: streamlit_app.py
resume_screener/models/: resume_pipeline.pkl
resume_screener/notebooks/: eda.ipynb
resume_screener/src/: data_loader.py  feature_engineering.py  model.py  predictor.py  preprocessor.py
test_resumes/: Rahul Sharma.docx
