[project]
name = "resume-screening-internship"
version = "0.1.0"
description = ""
authors = [
    {name = "om151204",email = "ommishra97277@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pypdf (==4.2.0)",
    "pdfplumber (==0.11.0)",
    "nltk (==3.8.1)",
    "joblib (==1.4.2)",
    "seaborn (==0.13.2)",
    "plotly (==5.22.0)",
    "streamlit (>=1.4.0,<3)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "wordcloud (>=1.9.6,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
