[project]
name = "resume-screening"
version = "0.1.0"
description = ""
authors = [
    {name = "om151204",email = "ommishra97277@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit (==1.35.0)",
    "scikit-learn (==1.4.2)",
    "pandas (==2.2.2)",
    "numpy (==1.26.4)",
    "pypdf (==4.2.0)",
    "pdfplumber (==0.11.0)",
    "nltk (==3.8.1)",
    "joblib (==1.4.2)",
    "matplotlib (==3.9.0)",
    "seaborn (==0.13.2)",
    "plotly (==5.22.0)",
    "wordcloud (==1.9.3)",
    "pillow (==9.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
